# s3-cleaner-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml
src/: main.rs
