[package]
name = "s3-cleaner-rs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "0.49.0"
aws-sdk-s3 = "0.19.0"
chrono = "0.4.26"
clap = { version = "4.3.22", features = ["derive"] }
duration-str = "0.5.1"
env_logger = "0.10.0"
log = "0.4.20"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
